--- a/README.text
+++ b/README.text
@@ -1,5 +1,11 @@
 ﻿People Centered Technology!
 ====================
+
+Web portal "Research & Academic Resource Management" will be the reason to increase knowledge among people, 
+people who are being on this research group will know about the research work done by different groups. 
+The Research group can show their research based work globally, faculty will providesfor their record, 
+delivered service and work activities. Student and teacher communication gap will be lessen through this portal
+
 People Centered Technology Research Group is working on designing systems which are more useful for humans.
 The group believes that mere availability of technology is not sufficient for users who lacks in literacy. 
 Research Supervisor: Dr. Nadeem Ahmad Ch is supervising the PCT research group. 
